Fixed the table initialization problem. Now the table is initialized if and when the datasests tab is visible.

--- a/src/webtsainterface/static/css/style.css
+++ b/src/webtsainterface/static/css/style.css
@@ -390,6 +390,7 @@ ul.ColVis_collection {
     overflow-y: auto;
     width: auto;
     height: 40%;
+    margin-left: -50px;
 }
 
 ul.ColVis_collection li {
